{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "AR",
            "id": "62b87e19-059f-4e39-9c2b-543666622c15",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "4658c757-27a3-49e0-a16c-cdd73a1230c4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "3e29031f-9d6a-4648-bbc1-f564ee99f13b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "7df45ad3-95b5-4954-9dec-03479c508912",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8ba9520e-6cbc-4313-9994-96699bf31bd2",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c813ccdd-bf36-4015-845f-9ed2b2c1d0dc",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d47f3d8-709a-4fdc-a318-71de0aaa1384",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Touchscreen",
            "bindingGroup": "Touchscreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}